<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtTittleSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_letter"
        android:textSize="12pt"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/txtNameSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="145dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutName"
        android:layout_width="350dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="165dp"
        app:layout_constraintHorizontal_bias="0.3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInputEditName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/hint_name"
            android:gravity="start"/>/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtLetterSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/letter"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="250dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutLetter"
        android:layout_width="350dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="270dp"
        app:layout_constraintHorizontal_bias="0.3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInputEditLetter"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:textAlignment="textStart"
            android:hint="@string/hint_letter"
            android:gravity="start"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSaveSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="65dp"
        android:layout_marginTop="520dp" />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="255dp"
        android:layout_marginTop="520dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>