<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.theme.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar_cancion"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="150dp"/>

    <Button
        android:id="@+id/btnMaraca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/practica_maraca"
        android:layout_marginTop="210dp"/>

    <Button
        android:id="@+id/btnTambor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/practica_tambor"
        android:layout_marginTop="270dp"/>

    <EditText
        android:id="@+id/txtSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Buscar canción..."
        android:layout_marginTop="340dp"
        android:inputType="text"
       />

    <ListView
        android:id="@+id/listViewSongs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtSearch"
        android:divider="@android:color/black"
        android:dividerHeight="1dp"
        android:layout_marginTop="400dp"
        />

    <TextView
        android:id="@+id/txtTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rhythmrevolution"
        android:layout_marginTop="75dp"
        android:textSize="14pt"
        android:textAlignment="center"
        android:textStyle="bold|italic"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>